output/TigerParser.java
// $ANTLR null /home/nathan/Telecom/vannesso4u/Tiger.g 2018-11-14 17:29:54

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class TigerParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDOP", "ID", "INTLIT", "LOGOP", 
		"MULTOP", "STRINGLIT", "'('", "')'", "','", "'.'", "':'", "':='", "';'", 
		"'='", "'['", "']'", "'array'", "'break'", "'do'", "'else'", "'end'", 
		"'for'", "'function'", "'if'", "'in'", "'let'", "'nil'", "'of'", "'then'", 
		"'to'", "'type'", "'var'", "'while'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int ADDOP=4;
	public static final int ID=5;
	public static final int INTLIT=6;
	public static final int LOGOP=7;
	public static final int MULTOP=8;
	public static final int STRINGLIT=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "tyid", "bracBegin", "fieldDec", "ifThen", "forExp", "exp", 
		"idBegin", "whileExp", "returnType", "tyDec", "varDec", "vd", "fieldCreate", 
		"lValue", "program", "atom", "seqExp", "multExp", "recTy", "funDec", "dec", 
		"e", "letExp", "arrTy", "ty"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public TigerParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public TigerParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/nathan/Telecom/vannesso4u/Tiger.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:19:1: program : exp ;
	public final TigerParser.program_return program() throws RecognitionException {
		TigerParser.program_return retval = new TigerParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope exp1 =null;


		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(19, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:20:2: ( exp )
			dbg.enterAlt(1);

			// /home/nathan/Telecom/vannesso4u/Tiger.g:20:4: exp
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(20,4);
			pushFollow(FOLLOW_exp_in_program70);
			exp1=exp();
			state._fsp--;

			adaptor.addChild(root_0, exp1.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(21, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "program"


	public static class dec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "dec"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:23:1: dec : ( tyDec | varDec | funDec );
	public final TigerParser.dec_return dec() throws RecognitionException {
		TigerParser.dec_return retval = new TigerParser.dec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope tyDec2 =null;
		ParserRuleReturnScope varDec3 =null;
		ParserRuleReturnScope funDec4 =null;


		try { dbg.enterRule(getGrammarFileName(), "dec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(23, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:24:2: ( tyDec | varDec | funDec )
			int alt1=3;
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			switch ( input.LA(1) ) {
			case 34:
				{
				alt1=1;
				}
				break;
			case 35:
				{
				alt1=2;
				}
				break;
			case 26:
				{
				alt1=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:24:4: tyDec
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(24,4);
					pushFollow(FOLLOW_tyDec_in_dec81);
					tyDec2=tyDec();
					state._fsp--;

					adaptor.addChild(root_0, tyDec2.getTree());

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:25:4: varDec
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(25,4);
					pushFollow(FOLLOW_varDec_in_dec86);
					varDec3=varDec();
					state._fsp--;

					adaptor.addChild(root_0, varDec3.getTree());

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:26:4: funDec
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(26,4);
					pushFollow(FOLLOW_funDec_in_dec91);
					funDec4=funDec();
					state._fsp--;

					adaptor.addChild(root_0, funDec4.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(27, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "dec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "dec"


	public static class tyDec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "tyDec"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:28:1: tyDec : 'type' tyid '=' ty ;
	public final TigerParser.tyDec_return tyDec() throws RecognitionException {
		TigerParser.tyDec_return retval = new TigerParser.tyDec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal5=null;
		Token char_literal7=null;
		ParserRuleReturnScope tyid6 =null;
		ParserRuleReturnScope ty8 =null;

		Object string_literal5_tree=null;
		Object char_literal7_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "tyDec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(28, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:29:2: ( 'type' tyid '=' ty )
			dbg.enterAlt(1);

			// /home/nathan/Telecom/vannesso4u/Tiger.g:29:4: 'type' tyid '=' ty
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(29,4);
			string_literal5=(Token)match(input,34,FOLLOW_34_in_tyDec101); 
			string_literal5_tree = (Object)adaptor.create(string_literal5);
			adaptor.addChild(root_0, string_literal5_tree);
			dbg.location(29,11);
			pushFollow(FOLLOW_tyid_in_tyDec103);
			tyid6=tyid();
			state._fsp--;

			adaptor.addChild(root_0, tyid6.getTree());
			dbg.location(29,16);
			char_literal7=(Token)match(input,17,FOLLOW_17_in_tyDec105); 
			char_literal7_tree = (Object)adaptor.create(char_literal7);
			adaptor.addChild(root_0, char_literal7_tree);
			dbg.location(29,20);
			pushFollow(FOLLOW_ty_in_tyDec107);
			ty8=ty();
			state._fsp--;

			adaptor.addChild(root_0, ty8.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(30, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "tyDec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "tyDec"


	public static class ty_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ty"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:32:1: ty : ( tyid | arrTy | recTy );
	public final TigerParser.ty_return ty() throws RecognitionException {
		TigerParser.ty_return retval = new TigerParser.ty_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope tyid9 =null;
		ParserRuleReturnScope arrTy10 =null;
		ParserRuleReturnScope recTy11 =null;


		try { dbg.enterRule(getGrammarFileName(), "ty");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(32, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:33:2: ( tyid | arrTy | recTy )
			int alt2=3;
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			switch ( input.LA(1) ) {
			case ID:
				{
				alt2=1;
				}
				break;
			case 20:
				{
				alt2=2;
				}
				break;
			case 37:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:33:4: tyid
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(33,4);
					pushFollow(FOLLOW_tyid_in_ty118);
					tyid9=tyid();
					state._fsp--;

					adaptor.addChild(root_0, tyid9.getTree());

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:34:4: arrTy
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(34,4);
					pushFollow(FOLLOW_arrTy_in_ty123);
					arrTy10=arrTy();
					state._fsp--;

					adaptor.addChild(root_0, arrTy10.getTree());

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:35:4: recTy
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(35,4);
					pushFollow(FOLLOW_recTy_in_ty128);
					recTy11=recTy();
					state._fsp--;

					adaptor.addChild(root_0, recTy11.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(36, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "ty");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "ty"


	public static class arrTy_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "arrTy"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:38:1: arrTy : 'array' 'of' tyid ;
	public final TigerParser.arrTy_return arrTy() throws RecognitionException {
		TigerParser.arrTy_return retval = new TigerParser.arrTy_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal12=null;
		Token string_literal13=null;
		ParserRuleReturnScope tyid14 =null;

		Object string_literal12_tree=null;
		Object string_literal13_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "arrTy");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(38, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:39:2: ( 'array' 'of' tyid )
			dbg.enterAlt(1);

			// /home/nathan/Telecom/vannesso4u/Tiger.g:39:4: 'array' 'of' tyid
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(39,4);
			string_literal12=(Token)match(input,20,FOLLOW_20_in_arrTy139); 
			string_literal12_tree = (Object)adaptor.create(string_literal12);
			adaptor.addChild(root_0, string_literal12_tree);
			dbg.location(39,12);
			string_literal13=(Token)match(input,31,FOLLOW_31_in_arrTy141); 
			string_literal13_tree = (Object)adaptor.create(string_literal13);
			adaptor.addChild(root_0, string_literal13_tree);
			dbg.location(39,17);
			pushFollow(FOLLOW_tyid_in_arrTy143);
			tyid14=tyid();
			state._fsp--;

			adaptor.addChild(root_0, tyid14.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(40, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "arrTy");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "arrTy"


	public static class recTy_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "recTy"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:42:1: recTy : '{' ( fieldDec ( ',' fieldDec )* )? '}' ;
	public final TigerParser.recTy_return recTy() throws RecognitionException {
		TigerParser.recTy_return retval = new TigerParser.recTy_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal15=null;
		Token char_literal17=null;
		Token char_literal19=null;
		ParserRuleReturnScope fieldDec16 =null;
		ParserRuleReturnScope fieldDec18 =null;

		Object char_literal15_tree=null;
		Object char_literal17_tree=null;
		Object char_literal19_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "recTy");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(42, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:43:2: ( '{' ( fieldDec ( ',' fieldDec )* )? '}' )
			dbg.enterAlt(1);

			// /home/nathan/Telecom/vannesso4u/Tiger.g:43:4: '{' ( fieldDec ( ',' fieldDec )* )? '}'
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(43,4);
			char_literal15=(Token)match(input,37,FOLLOW_37_in_recTy154); 
			char_literal15_tree = (Object)adaptor.create(char_literal15);
			adaptor.addChild(root_0, char_literal15_tree);
			dbg.location(43,8);
			// /home/nathan/Telecom/vannesso4u/Tiger.g:43:8: ( fieldDec ( ',' fieldDec )* )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:43:9: fieldDec ( ',' fieldDec )*
					{
					dbg.location(43,9);
					pushFollow(FOLLOW_fieldDec_in_recTy157);
					fieldDec16=fieldDec();
					state._fsp--;

					adaptor.addChild(root_0, fieldDec16.getTree());
					dbg.location(43,18);
					// /home/nathan/Telecom/vannesso4u/Tiger.g:43:18: ( ',' fieldDec )*
					try { dbg.enterSubRule(3);

					loop3:
					while (true) {
						int alt3=2;
						try { dbg.enterDecision(3, decisionCanBacktrack[3]);

						int LA3_0 = input.LA(1);
						if ( (LA3_0==12) ) {
							alt3=1;
						}

						} finally {dbg.exitDecision(3);}

						switch (alt3) {
						case 1 :
							dbg.enterAlt(1);

							// /home/nathan/Telecom/vannesso4u/Tiger.g:43:19: ',' fieldDec
							{
							dbg.location(43,19);
							char_literal17=(Token)match(input,12,FOLLOW_12_in_recTy160); 
							char_literal17_tree = (Object)adaptor.create(char_literal17);
							adaptor.addChild(root_0, char_literal17_tree);
							dbg.location(43,23);
							pushFollow(FOLLOW_fieldDec_in_recTy162);
							fieldDec18=fieldDec();
							state._fsp--;

							adaptor.addChild(root_0, fieldDec18.getTree());

							}
							break;

						default :
							break loop3;
						}
					}
					} finally {dbg.exitSubRule(3);}

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(43,36);
			char_literal19=(Token)match(input,38,FOLLOW_38_in_recTy168); 
			char_literal19_tree = (Object)adaptor.create(char_literal19);
			adaptor.addChild(root_0, char_literal19_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(44, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "recTy");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "recTy"


	public static class fieldDec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "fieldDec"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:46:1: fieldDec : ID ':' tyid ;
	public final TigerParser.fieldDec_return fieldDec() throws RecognitionException {
		TigerParser.fieldDec_return retval = new TigerParser.fieldDec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID20=null;
		Token char_literal21=null;
		ParserRuleReturnScope tyid22 =null;

		Object ID20_tree=null;
		Object char_literal21_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "fieldDec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(46, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:47:2: ( ID ':' tyid )
			dbg.enterAlt(1);

			// /home/nathan/Telecom/vannesso4u/Tiger.g:47:4: ID ':' tyid
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(47,4);
			ID20=(Token)match(input,ID,FOLLOW_ID_in_fieldDec179); 
			ID20_tree = (Object)adaptor.create(ID20);
			adaptor.addChild(root_0, ID20_tree);
			dbg.location(47,7);
			char_literal21=(Token)match(input,14,FOLLOW_14_in_fieldDec181); 
			char_literal21_tree = (Object)adaptor.create(char_literal21);
			adaptor.addChild(root_0, char_literal21_tree);
			dbg.location(47,11);
			pushFollow(FOLLOW_tyid_in_fieldDec183);
			tyid22=tyid();
			state._fsp--;

			adaptor.addChild(root_0, tyid22.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(48, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "fieldDec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "fieldDec"


	public static class funDec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funDec"
	// /home/nathan/Telecom/vannesso4u/Tiger.g:50:1: funDec : 'function' ID '(' ( fieldDec ( ',' fieldDec )* )? ')' returnType '=' exp ;
	public final TigerParser.funDec_return funDec() throws RecognitionException {
		TigerParser.funDec_return retval = new TigerParser.funDec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal23=null;
		Token ID24=null;
		Token char_literal25=null;
		Token char_literal27=null;
		Token char_literal29=null;
		Token char_literal31=null;
		ParserRuleReturnScope fieldDec26 =null;
		ParserRuleReturnScope fieldDec28 =null;
		ParserRuleReturnScope returnType30 =null;
		ParserRuleReturnScope exp32 =null;

		Object string_literal23_tree=null;
		Object ID24_tree=null;
		Object char_literal25_tree=null;
		Object char_literal27_tree=null;
		Object char_literal29_tree=null;
		Object char_literal31_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "funDec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(50, 0);

		try {
			// /home/nathan/Telecom/vannesso4u/Tiger.g:51:2: ( 'function' ID '(' ( fieldDec ( ',' fieldDec )* )? ')' returnType '=' exp )
			dbg.enterAlt(1);

			// /home/nathan/Telecom/vannesso4u/Tiger.g:51:4: 'function' ID '(' ( fieldDec ( ',' fieldDec )* )? ')' returnType '=' exp
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(51,4);
			string_literal23=(Token)match(input,26,FOLLOW_26_in_funDec194); 
			string_literal23_tree = (Object)adaptor.create(string_literal23);
			adaptor.addChild(root_0, string_literal23_tree);
			dbg.location(51,15);
			ID24=(Token)match(input,ID,FOLLOW_ID_in_funDec196); 
			ID24_tree = (Object)adaptor.create(ID24);
			adaptor.addChild(root_0, ID24_tree);
			dbg.location(51,18);
			char_literal25=(Token)match(input,10,FOLLOW_10_in_funDec198); 
			char_literal25_tree = (Object)adaptor.create(char_literal25);
			adaptor.addChild(root_0, char_literal25_tree);
			dbg.location(51,22);
			// /home/nathan/Telecom/vannesso4u/Tiger.g:51:22: ( fieldDec ( ',' fieldDec )* )?
			int alt6=2;
			try { dbg.enterSubRule(6);
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==ID) ) {
				alt6=1;
			}
			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /home/nathan/Telecom/vannesso4u/Tiger.g:51:23: fieldDec ( ',' fieldDec )*
					{
					dbg.location(51,23);
					pushFollow(FOLLOW_fieldDec_in_funDec201);
					fieldDec26=fieldDec();
					state._fsp--;

					adaptor.addChild(root_0, fieldDec26.getTree());
					dbg.location(51,31);
					// /home/nathan/Telecom/vannesso4u/Tiger.g:51:31: ( ',' fieldDec )*
					try { dbg.enterSubRule(5);

					loop5:
					while (true) {
						int alt5=2;
						try { dbg.enterDecision(5, decisionCanBacktrack[5]);

						int LA5_0 = input.LA(1);
						if ( (LA5_0==12) ) {
							alt5=1;
						}

						} finally {dbg.exitDecision(5);}

						switch (alt5) {
						case 1 :
							dbg.enterAlt(1);

							// /home/nathan/Telecom/vannesso4u/Tiger.g:51:32: ',' fieldDec
							{
							dbg.location(51,32);
							char_literal27=(Token)match(input,12,FOLLOW_12_in_funDec203); 
							char_literal27_tree = (Object)adaptor.create(char_literal27);
							adaptor.addChild(root_0, char_literal27_tree);
							dbg.location(51,36);
							pushFollow(FOLLOW_fieldDec_in_funDec205);
							fieldDec28=fieldDec();
							state._fsp--;

							adaptor.addChild(root_0, fieldDec28.getTree());

							}
							break;

						default :
							break loop5;
						}
					}
					} finally {dbg.exitSubRule(5);}

					}
					break;

			}
			} finally {dbg.exitSubRule(6);}
			dbg.location(51,49);
			char_literal29=(Token)match(input,11,FOLLOW_11_in_funDec211); 
			char_literal29_tree = (Object)adaptor.create(char_literal29);
			adaptor.addChild(root_0, char_literal29_tree);
			dbg.location(51,53);
			pushFollow(FOLLOW_returnType_in_funDec213);
			returnType30=returnType();
			state._fsp--;

			adaptor.addChild(root_0, returnType30.getTree());
			dbg.location(51,64);
			char_literal31=(Token)match(input,17,FOLLOW_17_in_funDec215); 
			char_literal31_tree = (Object)adaptor.create(char_literal31);
			adaptor.addChild(root_0, char_literal31_tree);
			dbg.location(51,68);
			pushFollow(FOLLOW_exp_in_funDec217);
			exp32=exp();
			state._fsp--;

			adaptor.addChild(root_0, exp32.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
